	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
		<modelVersion>4.0.0</modelVersion>

		<groupId>cucumber</groupId>
		<artifactId>cucumber-java-template</artifactId>
		<version>0.0.1</version>
		<packaging>jar</packaging>
		<name>Cucumber-JVM template</name>
		<properties>
			<maven.compiler.source>1.8</maven.compiler.source>
			<maven.compiler.target>1.8</maven.compiler.target>
			<allure.cucumber.version>2.0-BETA6</allure.cucumber.version>
			<aspectj.version>1.8.10</aspectj.version>
			<allure-maven>2.8</allure-maven>
			<allure.reportVersion>2.3.1</allure.reportVersion>
			<allure.results.directory>target/allure-results</allure.results.directory>
		<allure.report.directory>target/allure-report</allure.report.directory>
		</properties>
		<dependencies>
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-core</artifactId>
				<version>1.2.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-picocontainer</artifactId>
				<version>1.2.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-testng</artifactId>
				<version>1.2.0</version>
			</dependency>-->
			<dependency>
				<!-- allure report dependencies -->
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-cucumber-jvm</artifactId>
				<version>${allure.cucumber.version}</version>
			</dependency>

			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-java</artifactId>
				<version>1.2.0</version>
			</dependency>
			<dependency>
				<groupId>info.cukes</groupId>
				<artifactId>cucumber-junit</artifactId>
				<version>1.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-java</artifactId>
				<version>3.141.59</version>
			</dependency>
			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>
			<dependency>
				<groupId>com.vimalselvam</groupId>
				<artifactId>cucumber-extentsreport</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>com.aventstack</groupId>
				<artifactId>extentreports</artifactId>
				<version>3.1.2</version>
			</dependency>
			<dependency>
				<groupId>com.github.mkolisnyk</groupId>
				<artifactId>cucumber-reports</artifactId>
				<version>1.0.7</version>
				<exclusions>
					<exclusion>
						<groupId>xerces</groupId>
						<artifactId>xercesImpl</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.github.bonigarcia</groupId>
				<artifactId>webdrivermanager</artifactId>
				<version>3.8.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>2.3.1</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>2.2.11</version>
			</dependency>

			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>2.2.11</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.4.1</version>
			</dependency>
			<dependency>
				<groupId>com.github.stephenc.monte</groupId>
				<artifactId>monte-screen-recorder</artifactId>
				<version>0.7.7.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-java-commons</artifactId>
				<version>2.0-BETA6</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-htmlunit-driver -->
			<!-- https://mvnrepository.com/artifact/org.monte/screen-recorder -->

		</dependencies>
		<build>
			<pluginManagement>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.5.1</version>
						<configuration>
							<source>8</source>
							<target>8</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19.1</version>
						<configuration>
							<testFailureIgnore>true</testFailureIgnore>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>net.masterthought</groupId>
						<artifactId>maven-cucumber-reporting</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>execution</id>
								<phase>verify</phase>
								<goals>
									<goal>generate</goal>
								</goals>
								<configuration>
									<projectName>ExecuteAutomation</projectName>
									<outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
									<cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.18</version>
						<dependencies>
							<dependency>
								<groupId>org.apache.maven.surefire</groupId>
								<artifactId>surefire-junit47</artifactId>
								<version>2.18</version>
							</dependency>
						</dependencies>
					</plugin>
					<plugin>
						<groupId>io.qameta.allure</groupId>
						<artifactId>allure-maven</artifactId>
						<version>${allure-maven}</version>
						<configuration>
							<reportVersion>${allure.reportVersion}</reportVersion>
						</configuration>
					</plugin>
				</plugins>
			</pluginManagement>
		</build>
	</project>
